--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         </div>
       </div>
     </nav>
-    <div class="alert alert-danger" role="alert">
-      A simple danger alert—check it out!
+    <div class="alert alert-success" role="alert">
+      A simple notifications alert—check it out!
     </div>
     <div class="alert alert-success alert-dismissible fade show" role="alert">
       <strong>Hey there!</strong> Welcome to Cognifyz Technologies
